fix a few deprecation warnings