@@ -94,7 +94,7 @@ public interface ISerializable {
                         throw new RuntimeException("Missing __class__ key: " + f.toString());
                     String clsName = sec.getString("__class__");
                     Class cls = Class.forName(clsName);
-                    ISerializable o = (ISerializable) cls.newInstance();
+                    ISerializable o = (ISerializable) cls.getDeclaredConstructor().newInstance();
                     o.deserialize(sec);
                     newValue = o;
                     //} else if (List.class.isAssignableFrom(f.getType())) {
@@ -111,7 +111,7 @@ public interface ISerializable {
                                 throw new RuntimeException("Missing __class__ key: " + f.toString());
                             String clsName = newSec.getString("__class__");
                             Class cls = Class.forName(clsName);
-                            ISerializable o = (ISerializable) cls.newInstance();
+                            ISerializable o = (ISerializable) cls.getDeclaredConstructor().newInstance();
                             o.deserialize(newSec);
                             map.put(key, o);
                         } else {
